--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://34.92.22.118:3336/docker-compose-springboot-mysql-redis?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&transformedBitIsBoolean=true&serverTimezone=GMT%2B8&nullCatalogMeansCurrent=true&allowPublicKeyRetrieval=true
-    username: test
-    password: 12345
+    url: jdbc:mysql://localhost:3306/5322final?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&transformedBitIsBoolean=true&serverTimezone=GMT%2B8&nullCatalogMeansCurrent=true&allowPublicKeyRetrieval=true
+    username: root
+    password: 123456
     initial-size: 3
     min-idle: 3
     max-active: 18
@@ -29,9 +29,9 @@ spring:
       connection-timeout: 30000
       connection-test-query: SELECT 1
   redis:
-    host: 192.168.1.105
+    host: localhost
     port: 6379
-    password: lq318925
+    password: 12345
     database: 0
     jedis:
       pool:
