--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,7 +19,7 @@ spring:
         ddl-auto: none
   profiles:
 #   引入另外一个同路径下yml配置文件，该配置文件必须以application-开头
-    active: pro
+    active: test
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
